# Assignment-04-hello-agent

hello-agent-assignment/: .gitignore
hello-agent-assignment/packaged-agent/: README.md  pyproject.toml
hello-agent-assignment/packaged-agent/src/packaged_agent/: main.py
hello-agent-assignment/simple-agent/: README.md  main.py  pyproject.toml
